gcp-deployment.yaml
# -----------------------------
# POSTGRES
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432

---
# -----------------------------
# BACKEND
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend
  
  
  template:
    metadata:
      labels:
        app: backend

    spec:
      serviceAccountName: zupa-ksa
      nodeSelector:
        kubernetes.io/hostname: gke-moja-zupa-gke-default-pool-5bf3bf83-ncj9


      containers:
      - name: backend
        image: europe-central2-docker.pkg.dev/moja-zupa-gcp/moja-zupa-repo/backend:v4
        
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/status
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /api/status
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 5000

        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true

      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "zupa-secrets-provider"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend

  ports:
    - port: 5000

---
# -----------------------------
# FRONTEND
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: europe-central2-docker.pkg.dev/moja-zupa-gcp/moja-zupa-repo/frontend:v2

        imagePullPolicy: Always

        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80

---
# -----------------------------
# INGRESS
# -----------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
